process the `raw_lists` table - just found out that duplicate could've occur in the table. fixed by   adding `UNION` on one of the CTE. probably caused by the source system - creates usable `raw_lists` table after getting each user scores right   (through mapping and dividing as in appropriate_score) - adds test for `raw_lists` entry uniqueness

--- a/sql_transforms/models/sources.yml
+++ b/sql_transforms/models/sources.yml
@@ -5,7 +5,9 @@ sources:
     description: Fluffy Folks data taken from Anilist
     schema: main
     tables:
-      # - name: users
+      - name: users
       # - name: lists
       - name: favourites
+      - name: raw_lists
+      - name: score_mapping
       # - name: media_details
