use current `raw_lists` as base lists I had intended to preserve historical records and made two version of lists: a raw one that is dropped everytime and another one that preserves historical change. But I changed my mind and opt with the dropped everytime version instead.
Reason: I don't know what the historical data could be used for;
if what I need are always satisfied by the new ones, then there's
no need to preserve any history with the data.

(one case where I need to preserve history is in the AOTY 2022 case, but
 it can be achieved through other means that is not through "historical"
 lists tables, e.g. through another yearly table)

--- a/sql_transforms/models/staging/_stg_lists.yml
+++ b/sql_transforms/models/staging/_stg_lists.yml
@@ -4,7 +4,7 @@ version: 2
 # https://docs.getdbt.com/faqs/tests/uniqueness-two-columns#2-test-an-expression
 
 models:
-  - name: stg_raw_lists
+  - name: stg_lists
     description: >
       This model is the cleaned version of lists.
       Cleaning done by adjusting the "buggy" score from `raw_lists` table`.
