initial working historical lists - create stg_lists_2022 view that adds `appropriate_score` to `lists_2022`   and align the column to match `stg_raw_lists` - historical lists works by using `ROW_NUMBER` to identify unchanged   state and `LEAD` to mark the "currentness"

--- a/sql_transforms/models/sources.yml
+++ b/sql_transforms/models/sources.yml
@@ -6,7 +6,7 @@ sources:
     schema: main
     tables:
       - name: users
-      # - name: lists
+      - name: lists_2022 # initial lists
       - name: favourites
       - name: raw_lists
       - name: score_mapping
