--- a/sql_transforms/models/staging/_stg_lists.yml
+++ b/sql_transforms/models/staging/_stg_lists.yml
@@ -1,15 +1,5 @@
 version: 2
 
-# test expression
-# https://docs.getdbt.com/faqs/tests/uniqueness-two-columns#2-test-an-expression
-
 models:
   - name: stg_lists
-    description: >
-      This model is the cleaned version of lists.
-      Cleaning done by adjusting the "buggy" score from `raw_lists` table`.
-      Adjustment done in two ways: mapping for users with point 3 and 5 score format,
-      and dividing `anichan_score` for user with point 10 and decimal 10 score format.
-    tests:
-      - unique:
-          column_name: "(username || '-' || media_id || '-' || media_type)"
+    description: This model is a currently worked on historical lists
