--- a/sql_transforms/models/staging/_stg_favourites.yml
+++ b/sql_transforms/models/staging/_stg_favourites.yml
@@ -1,7 +1,7 @@
 version: 2
 
 models:
-  - name: stg_favorites
+  - name: stg_favourites
     description: This model fetches favourites table
     columns:
       - name: type
