test: add ability to test dag runs - test `fetch_anilist_data` dag - test runs flexibly via `make` - be careful when setting `start_date`, `end_date`, and `execution_date`   as dag might not run if they're incorrect

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-ff.log
 fluff
 fluff.db
-fluff.db-journal
-*.bak
+fluff_test.db
+*.db.bak
 .python-version
 
 __pycache__
@@ -11,3 +10,6 @@ data/
 logs/
 images/
 airflow/
+
+dags/test-dag.py
+dags/custom/testing_operators.py
